# chip8

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  build.sh  build_and_run.sh  build_and_test.sh  chip8.cpp  chip8.hpp  chip8_tests.cpp  main.cpp
assets/roms/BC_test/: BC_test.txt
src/: chip8.cpp  chip8.hpp  chip8_audio.cpp  chip8_audio.hpp  chip8_config.h.in  chip8_core.cpp  chip8_core.hpp  chip8_disassembler.cpp  chip8_disassembler.hpp  chip8_emulator.cpp  chip8_emulator.hpp  chip8_flag.hpp  chip8_glfw.cpp  chip8_glfw.hpp  chip8_prelude.hpp  chip8_timer.cpp  chip8_timer.hpp  main.cpp
